update for man, box move

--- a/proj.ios/Info.plist
+++ b/proj.ios/Info.plist
@@ -23,7 +23,7 @@
 		<string>Icon-152.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.miglab.carrier</string>
+	<string>com.miglab.test.carrier</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
